krita/ui/kra/kis_kra_saver.h
@@ -44,6 +44,7 @@ public:
     QStringList errorMessages() const;
 
 private:
+    void saveBackgroundColor(QDomDocument& doc, QDomElement& element, KisImageWSP image);
     void saveCompositions(QDomDocument& doc, QDomElement& element, KisImageWSP image);
     bool saveAssistants(KoStore *store,QString uri, bool external);
     bool saveAssistantsList(QDomDocument& doc, QDomElement& element);
