krita/ui/tests/kis_kra_saver_test.cpp
@@ -49,6 +49,8 @@
 void KisKraSaverTest::testRoundTrip()
 {
     KisDoc2* doc = createCompleteDocument();
+    KoColor bgColor(Qt::red, doc->image()->colorSpace());
+    doc->image()->setDefaultProjectionColor(bgColor);
     doc->saveNativeFormat("roundtriptest.kra");
     QStringList list;
     KisCountVisitor cv1(list, KoProperties());
@@ -61,6 +63,9 @@ void KisKraSaverTest::testRoundTrip()
     KisCountVisitor cv2(list, KoProperties());
     doc2.image()->rootLayer()->accept(cv2);
     QCOMPARE(cv1.count(), cv2.count());
+
+    // check whether the BG color is saved correctly
+    QCOMPARE(doc2.image()->defaultProjectionColor(), bgColor);
 }
 
 void KisKraSaverTest::testSaveEmpty()
